# viztula

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/chart/: model.rs  repository.rs  service.rs
viztula/: Cargo.toml  LICENSE
viztula-frontend/: package-lock.json  package.json
viztula-frontend/components/: LinePlot.vue
viztula-frontend/pages/: index.vue
viztula-frontend/server/api/: hello.ts
viztula/src/: chart.rs  utils.rs
viztula/src/chart/: model.rs  service.rs
