[package]
name = "viztula"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sql-builder = "3.1.1"
tokio = "1.38.0"
tokio-postgres = "0.7.10"
