[package]
name = "viztula"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sql-builder = "3.1.1"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "bigdecimal"]}
